Added rule to check todos with the same title.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /.vs/TodoApp/v16/.suo
 /.vs/TodoApp/DesignTimeBuild/.dtbcache.v2
 /.vs/TodoApp/config/applicationhost.config
+/.vs/TodoApp/v16/TestStore/0/168.testlog
